build/log/idf_py_stdout_output_16185
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/dsopocko/espressif/esp-git/heatmap/build/bootloader/esp-idf/esptool_py && /home/dsopocko/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/dsopocko/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/dsopocko/espressif/esp-git/heatmap/build/bootloader/bootloader.bin
Bootloader binary size 0x5230 bytes. 0x2dd0 bytes (36%) free.
[2/8] Building C object esp-idf/sdcard/CMakeFiles/__idf_sdcard.dir/sdcard.c.obj
FAILED: esp-idf/sdcard/CMakeFiles/__idf_sdcard.dir/sdcard.c.obj 
/home/dsopocko/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-892-g692c1fcc52-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/dsopocko/espressif/esp-git/heatmap/build/config -I/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/include -I/home/dsopocko/esp/esp-idf/components/newlib/platform_include -I/home/dsopocko/esp/esp-idf/components/freertos/config/include -I/home/dsopocko/esp/esp-idf/components/freertos/config/include/freertos -I/home/dsopocko/esp/esp-idf/components/freertos/config/xtensa/include -I/home/dsopocko/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dsopocko/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dsopocko/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/dsopocko/esp/esp-idf/components/freertos/esp_additions/include -I/home/dsopocko/esp/esp-idf/components/esp_hw_support/include -I/home/dsopocko/esp/esp-idf/components/esp_hw_support/include/soc -I/home/dsopocko/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/dsopocko/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/dsopocko/esp/esp-idf/components/heap/include -I/home/dsopocko/esp/esp-idf/components/log/include -I/home/dsopocko/esp/esp-idf/components/soc/include -I/home/dsopocko/esp/esp-idf/components/soc/esp32s3 -I/home/dsopocko/esp/esp-idf/components/soc/esp32s3/include -I/home/dsopocko/esp/esp-idf/components/hal/platform_port/include -I/home/dsopocko/esp/esp-idf/components/hal/esp32s3/include -I/home/dsopocko/esp/esp-idf/components/hal/include -I/home/dsopocko/esp/esp-idf/components/esp_rom/include -I/home/dsopocko/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/dsopocko/esp/esp-idf/components/esp_rom/esp32s3 -I/home/dsopocko/esp/esp-idf/components/esp_common/include -I/home/dsopocko/esp/esp-idf/components/esp_system/include -I/home/dsopocko/esp/esp-idf/components/esp_system/port/soc -I/home/dsopocko/esp/esp-idf/components/esp_system/port/include/private -I/home/dsopocko/esp/esp-idf/components/xtensa/esp32s3/include -I/home/dsopocko/esp/esp-idf/components/xtensa/include -I/home/dsopocko/esp/esp-idf/components/xtensa/deprecated_include -I/home/dsopocko/esp/esp-idf/components/lwip/include -I/home/dsopocko/esp/esp-idf/components/lwip/include/apps -I/home/dsopocko/esp/esp-idf/components/lwip/include/apps/sntp -I/home/dsopocko/esp/esp-idf/components/lwip/lwip/src/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/freertos/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/dsopocko/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/dsopocko/esp/esp-idf/components/fatfs/diskio -I/home/dsopocko/esp/esp-idf/components/fatfs/src -I/home/dsopocko/esp/esp-idf/components/fatfs/vfs -I/home/dsopocko/esp/esp-idf/components/wear_levelling/include -I/home/dsopocko/esp/esp-idf/components/esp_partition/include -I/home/dsopocko/esp/esp-idf/components/sdmmc/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_gpio/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_sdspi/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_spi/include -I/home/dsopocko/esp/esp-idf/components/esp_pm/include -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/dsopocko/espressif/esp-git/heatmap=. -fmacro-prefix-map=/home/dsopocko/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/sdcard/CMakeFiles/__idf_sdcard.dir/sdcard.c.obj -MF esp-idf/sdcard/CMakeFiles/__idf_sdcard.dir/sdcard.c.obj.d -o esp-idf/sdcard/CMakeFiles/__idf_sdcard.dir/sdcard.c.obj -c /home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c
/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c: In function 'sdspi_close':
/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c:131:25: error: invalid initializer
  131 |     sdmmc_host_t host = &GLOBAL_HOST;
      |                         ^
/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c:133:32: error: 'mount_point' undeclared (first use in this function)
  133 |     esp_vfs_fat_sdcard_unmount(mount_point, card);
      |                                ^~~~~~~~~~~
/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c:133:32: note: each undeclared identifier is reported only once for each function it appears in
/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c:133:45: error: 'card' undeclared (first use in this function)
  133 |     esp_vfs_fat_sdcard_unmount(mount_point, card);
      |                                             ^~~~
/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c: In function 'sdspi_test':
/home/dsopocko/espressif/esp-git/heatmap/components/sdcard/sdcard.c:142:15: warning: variable 'ret' set but not used [-Wunused-but-set-variable]
  142 |     esp_err_t ret;
      |               ^~~
ninja: build stopped: subcommand failed.
